--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -190,10 +190,10 @@
                 <a href='/{{ event.name|lower|cut:" " }}' class="mt-4">
                     <button type="button" class="mt-4 flex gap-2 items-center justify-between text-white bg-[#4f46e5] hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-normal rounded-md text-lg px-6 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
                         Register now
-                    </button>
+                    </button>   
                 </a>
             </div>
-            <div class="min-w-[50%] min-h-[100%] image-inset">
+            <div class="md:min-w-[100%] lg:min-w-[50%]  min-h-[100%] image-inset">
                 <img src="{% static event.imagepath %}" alt="..." class="min-w-[100%] min-h-[100%]">
             </div>
             
