--- a/core/templates/core/nav.html
+++ b/core/templates/core/nav.html
@@ -1,8 +1,14 @@
 {% load static %}
 {% load static tailwind_tags %}
-<nav class="flex justify-between items-center w-full px-6 lg:px-12 py-4 z-[100] bg-[#F4F4F4] bg-opacity-75">
+<nav class="flex justify-between items-center w-full px-4 lg:px-6 py-4 z-[100] bg-[#F4F4F4] bg-opacity-75">
     <div class="flex items-center gap-2">
         <img src="{% static 'images/mcetlogo.png' %}" alt="logo" class="w-24">
+        <div class="flex-col flex">
+            <p class="font-medium lg:text-base text-xs">Dr.Mahalingam <br> College of Engineering and Technology</p>
+        </div>
+    </div>
+    <div class="flex">
+        <img src="{% static 'images/nxtechlogo.svg' %}" alt="logo" class=" w-32 lg:w-48">
     </div>
 
     <div class="hidden lg:flex gap-6 desk-elements">
@@ -10,14 +16,14 @@
         <a href="#Event" class="text-black">Events</a>
         <a href="#Contact" class="text-black">Contact</a>
     </div>
-    <div class="absolute top-8 lg:hidden right-6 flex gap-2 flex-col cursor-pointer navbutton">
+    <div class=" lg:hidden flex gap-2 flex-col cursor-pointer navbutton">
         <div class="h-[1px] w-9 rounded-md bg-black"></div>
         <div class="h-[1px] w-9 rounded-md bg-black"></div>
         <div class="h-[1px] w-9 rounded-md bg-black"></div>
     </div>
 
     <!-- Mobile div -->
-     <div class="transition duration-700 w-full h-[50vh] bg-[#f4f4f4] pl-12 py-6 flex flex-col absolute top-[-50vh] left-0 mobileview z-[100]">
+     <div class="transition duration-700 w-full h-[50vh] bg-[#f4f4f4] pl-12 py-6 flex flex-col absolute top-[-500px] left-0 mobileview z-[100]">
         <div class=" relative flex justify-between items-center gap-2">
             <div>
             <img src="{% static 'images/srclogo.svg' %}" alt="logo" class="w-14">
