--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -50,7 +50,7 @@ html
 .mobileview
 {
     position: absolute;
-    top: -50vh;
+    top: -500px;
     transition: 1s;
 }
 .mobileview.active
@@ -78,7 +78,7 @@ html
     width: 460px;
     height: 310px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
     .image-inset::after
     {
         content: '';
@@ -89,6 +89,10 @@ html
         background: linear-gradient(0deg, rgba(68,2,53,1), rgba(0,212,255,0) 100%);
         width: 100%;
         height: 100%;
+    }
+    .image-inset
+    {
+        min-width: 100%;
     }
     .image-inset>img
     {
