In Production UI Update: Index.html

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -123,10 +123,9 @@
                 <!-- Cards -->
                 <div class="backdrop-blur-md bg-white bg-opacity-25 border-2 border-gray-100 rounded-md p-6 lg:p-12 w-full lg:max-w-[1000px] mt-12">
                     <p class="font-medium text-2xl ">About the Event</p>
-                    <p class=" text-gray-900 mt-4">
-                        Founder’s Fest is a one-day long entrepreneurial event focusing on young entrepreneurs to present their next business idea to a panel of judges who can then provide you with valuable insights in refining them to better comprehend with real-world competencies establishing a market viable business.
+                    <p class=" text-gray-900 mt-4">Founder’s Fest is a one-day long entrepreneurial event focusing on young entrepreneurs to present their next business idea to a panel of judges who can then provide you with valuable insights in refining them to better comprehend with real-world competencies establishing a market viable business
                     </p>
-                    <p class="mt-6 text-gray-800 font-medium">Date and Time: Aug, 20, 2024, Fullday</p>
+                    <p class="mt-6 text-gray-800 font-medium">Date and Time: Aug, 19, 2024, Fullday</p>
                     <p class="text-gray-800 font-medium">Venue: Mechanical Seminar Hall</p>
                     <a href="/founder'sfest" class="w-full">
                         <button type="button" class="w-full flex gap-2 text-center items-center justify-center text-white bg-[#4f46e5] hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-normal rounded-md text-lg px-12 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-6">
@@ -158,7 +157,7 @@
                     <p class="text-gray-900 mt-4">
                         Challenge showcase is high-level problem solving event where participants will be presented with real world product, in which they will have to find a inherent problem within the allotted time and present a engineering-based solution for the same, which the jury will consider.
                     </p>
-                    <p class="mt-6 text-gray-800 font-medium">Date and Time: Aug, 20, 2024, Fullday</p>
+                    <p class="mt-6 text-gray-800 font-medium">Date and Time: Aug, 20, 2024, 09:00am to 02:00pm</p>
                     <p class="text-gray-800 font-medium">Venue: Mechanical Seminar Hall</p>
                     <a href="/challengeshowcase">
                         <button type="button" class="w-full flex gap-2 items-center justify-center text-white bg-[#4f46e5] hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-normal rounded-md text-lg px-12 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-6">
