UI Update: Badge in index.html

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -122,7 +122,10 @@
                 
                 <!-- Cards -->
                 <div class="backdrop-blur-md bg-white bg-opacity-25 border-2 border-gray-100 rounded-md p-6 lg:p-12 w-full lg:max-w-[1000px] mt-12">
-                    <p class="font-medium text-2xl ">About the Event</p>
+                    <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-yellow-900 dark:text-yellow-300">
+                        Registration Closes Soon
+                    </span>
+                    <p class="font-medium text-2xl mt-2">About the Event</p>
                     <p class=" text-gray-900 mt-4">Founder’s Fest is a one-day long entrepreneurial event focusing on young entrepreneurs to present their next business idea to a panel of judges who can then provide you with valuable insights in refining them to better comprehend with real-world competencies establishing a market viable business
                     </p>
                     <p class="mt-6 text-gray-800 font-medium">Date and Time: Aug, 19, 2024, Fullday</p>
@@ -153,7 +156,10 @@
                 
                 <!-- Cards -->
                 <div class="backdrop-blur-md bg-white bg-opacity-25 border-2 border-gray-100 rounded-md p-6 lg:p-12 w-full lg:max-w-[1000px] mt-12">
-                    <p class="font-medium text-2xl ">About the Event</p>
+                    <span class="bg-yellow-100 text-yellow-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-yellow-900 dark:text-yellow-300">
+                        Registration Closes Soon
+                    </span>
+                    <p class="font-medium text-2xl mt-2">About the Event</p>
                     <p class="text-gray-900 mt-4">
                         Challenge showcase is high-level problem solving event where participants will be presented with real world product, in which they will have to find a inherent problem within the allotted time and present a engineering-based solution for the same, which the jury will consider.
                     </p>
